# pypeit-wrapit

./: .MANIFEST  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
src/pypeit_wrapit/: cli.py  common.py  lt_sprat.py
src/pypeit_wrapit/data/lt_sprat/: bias.fits  flat.fits  sensfunc_blue.fits  sensfunc_red.fits
tests/: test_stack_spectra.py
