[project]
name = "pypeit-wrapit"
version = "0.1.0"
description = "Wraps PypeIt for easier use in pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy",
    "loguru",
    "numpy",
    "pypeit @ git+https://github.com/mpursiai/PypeIt.git@newrelease",
    "rich-click"
]

[project.urls]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "ty",
    "twine",
    "build",
    "pre-commit",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pypeit-wrapit = "pypeit_wrapit.cli:cli"

[tool.ruff]
target-version = "py312"

[tool.hatch.metadata]
allow-direct-references = true
