[project]
name = "pypeit-wrapit"
version = "0.1.1"
description = "Wraps PypeIt for easier use in pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "astropy",
    "loguru",
    "numpy",
    "pypeit @ git+https://github.com/mpursiai/PypeIt.git@newrelease",
    "rich-click"
]

[project.urls]

[dependency-groups]
dev = [
    "black",
    "ruff",
    "ty",
    "twine",
    "build",
    "pre-commit",
    "ipython",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pypeit-wrapit = "pypeit_wrapit.cli:cli"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["I"]  # Enable isort rules

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pypeit_wrapit"]
from-first = true


[tool.hatch.metadata]
allow-direct-references = true
